[package]
authors = [
    "Kartik Sharma <kartik.sharma522@gmail.com>",
    "Ajeet D'Souza <98ajeet@gmail.com>",
]
description = "Extract partitions from Android OTA files"
categories = ["command-line-utilities", "android"]
edition = "2021"
keywords = ["android", "cli", "terminal"]
license = "MIT"
name = "otadump"
repository = "https://github.com/crazystylus/otadump"
readme = "README.md"
rust-version = "1.76.0"
version = "0.1.3"


[build-dependencies]
prost-build = "0.13.4"

[dependencies]
anyhow = "1.0.69"
bzip2 = { version = "0.5.0", features = ["static"] }
clap = { version = "4.2.1", features = ["derive"] }
color-print = "0.3.4"
hex = "0.4.3"
indicatif = "0.17.3"
liblzma = { version = "0.3.4", features = ["static"] }
memmap2 = "0.9.5"
nom = "7.1.1"
nom-derive = "0.10.1"
prost = "0.13.4"
rayon = "1.7.0"
sha2 = "0.10.6"
sync-unsafe-cell = "0.1.0"
tempfile = "3.6.0"
zip = { version = "2.2.2", features = [
    "deflate-zlib-ng",
    "bzip2",
    "zstd",
], default-features = false }

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true
